src/parse/snapshots/protox__parse__tests__parse_option-4.snap
---
source: src/parse/tests.rs
expression: parser.parse_option()
---
Ok(
    Option {
        body: OptionBody {
            name: FullIdent {
                parts: [
                    Ident {
                        value: "foo",
                        span: 8..11,
                    },
                ],
            },
            field_name: Some(
                FullIdent {
                    parts: [
                        Ident {
                            value: "bar",
                            span: 13..16,
                        },
                    ],
                },
            ),
            value: Bool(
                Bool {
                    value: true,
                    span: 19..23,
                },
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..24,
    },
)
