src/parse/snapshots/protox__parse__tests__parse_option-6.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_option() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "'.' or '='",
            found: LeftParen,
            span: 11..12,
        },
    ],
)
