src/parse/snapshots/protox__parse__tests__parse_package-3.snap
---
source: src/parse/tests.rs
expression: parser.parse_package()
---
Ok(
    Package {
        name: FullIdent {
            parts: [
                Ident {
                    value: "foo",
                    span: 8..11,
                },
                Ident {
                    value: "bar",
                    span: 12..15,
                },
            ],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..16,
    },
)
