src/parse/snapshots/protox__parse__tests__parse_package-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_package() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "'.' or ';'",
            found: RightParen,
            span: 11..12,
        },
    ],
)
