src/parse/snapshots/protox__parse__tests__parse_package.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_package() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Package {
        name: FullIdent {
            parts: [
                Ident {
                    value: "foo",
                    span: 8..11,
                },
            ],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..12,
    },
)
